column and row spacing fixes

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -29,8 +29,8 @@ body {
     }
 
     @include breakpoint($large-up) {
-        padding-right: $space-large/2;
-        padding-left: $space-large/2;  
+        padding-right: $space-large;
+        padding-left: $space-large;  
     }
 }
 
@@ -43,12 +43,12 @@ body {
 
     @include breakpoint($medium-up) {
         padding-right: $space-medium/2;
-        padding-left: $space-large/2;  
+        padding-left: $space-medium/2;  
     }
 
     @include breakpoint($large-up) {
-        padding-right: $space-large;
-        padding-left: $space-large;  
+        padding-right: $space-medium;
+        padding-left: $space-medium;  
     }
 }
 
